# resnet

./: .gitignore  dataset.py  main.py  pyproject.toml  resnet.py  train.py
data/: label_encoder.pkl
