[project]
name = "resnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
